# djvu-imager-qt

./: CMakeLists.txt  DialogOptions.cpp  DialogOptions.h  DialogProgress.cpp  DialogProgress.h  DjVu Sep.clw  DjVu Sep.cpp  DjVu Sep.dsp  DjVu Sep.dsw  DjVu Sep.h  DjVu Sep.opt  DjVu Sep.rc  DjVu SepDlg.cpp  DjVu SepDlg.h  DjVu_Imager-Qt_ru_RU.ts  MyListCtrl.cpp  MyListCtrl.h  NewFolder.cpp  NewFolder.h  README.md  StdAfx.cpp  StdAfx.h  config.h.in  djvucount.cpp  djvudpi.cpp  djvusizes.cpp  history.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  optionsdialog.cpp  optionsdialog.h  optionsdialog.ui  pageparam.h  progressdialog.h  qconvertthread.cpp  qinsertthread.cpp  qinsertthread.h  qmytableview.cpp  (+8 more)
Console/: DjVuInfo.cpp  GString.cpp  djvudumpm.cpp  djvumake.cpp  fi_c44.cpp  readme.txt
debian/: changelog  control  copyright  djvu-imager-qt.desktop
help/: c44.html  djvm.html  djvmcvt.html  djvuextract.html  djvumake.html  eng.htm  rus.htm
languages/: DjVu_Imager-Qt_ru.ts
packaging/linux/: djvu_imager-qt-amd64.dbp
res/: DjVu Sep.rc2  appicon.qrc  winicon.rc
src/: mainwindow.h  optionsdialog.h  optionsdialog.ui  progressdialog.cpp  progressdialog.ui  qconvertthread.h  qmytableview.cpp  qviewthread.cpp  utils.cpp  utils.h
